# chimera

./: .gitignore  .pre-commit-config.yaml  ASSEMBLY_ARCHITECTURE_BEST_PRACTICES.md  CHANGELOG.md  CHIMERA_ARCHITECTURAL_COMPENDIUM.md  CLAUDE.md  CODEBASE_REVIEW.md  CODEBASE_REVIEW_EXPANDED.md  COMPILATION_RESOLUTION_SUMMARY.md  CULTIVATION_FIXES_SUMMARY.md  CULTIVATION_SYSTEMS_COMPILATION_SUCCESS.md  ECONOMY_SIMPLIFICATION_SUMMARY.md  ERROR_WAVE_SUMMARY.md  FINAL_COMPILATION_FIX_SUMMARY.md  GEMINI.md  GENETICS_REBUILD_PLAN.md  IPM_GAMING_REBUILD_PLAN.md  NAMESPACE_RESOLUTION_SUMMARY.md  PROGRESSION_REBUILD_PLAN.md  PROJECT_CHIMERA_ERROR_PREVENTION_GUIDE.md  README.md  ROADMAP.md  ROADMAP_VISION.md  SYSTEMATIC_DEBUGGING_METHODOLOGY.md  SYSTEMATIC_FEATURE_REBUILD_PLAN.md  TYPE_VALIDATION_GUIDELINES.md  fix_duplicate_classes.py  fix_duplicates.py  fix_event_call.py  pyproject.toml  setup.py
Assets/: UniversalRenderPipelineGlobalSettings.asset
Chimera/: .gitignore  CLAUDE.md  README.md
Documentation/: API-Reference.md  Chimera_Core_Systems_Implementation_Specification.md  Complete-Development-Guide.md  Developer-Documentation.md  Development-Progress.md  Final-Compilation-Fixes.md  Getting-Started-Guide.md  MCP-Server-Setup.md  Project_Chimera_Complete_Technical_Specification.md  README.md  System-Reference-Guide.md  Testing-Guide.md  Unity-6-Migration-Lessons-Learned.md  Unity-Version-Update.md  VFX_Graph_Integration_Technical_Specification.md  VSCode-Package-Removal.md
ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
scripts/: prd.txt  (+2 more)
(+916 files in other folders)
